--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
-    "mongoose": "^4.5.2"
+    "jwt-simple": "^0.5.0",
+    "moment": "^2.13.0",
+    "mongoose": "^4.5.2",
+    "satellizer": "^0.14.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
